2003-11-28 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b41

	* Bugfix: trim strings got from language files in emulate_gettext().
		  This fixes non working multilanguage on nongettext systems.

2003-11-28  Bharat Mediratta  <bharat@menalto.com> 1.4.2-cvs-b40

	* Update php_value template to use php_value on Apache2 and
	  php_flag on Apache1 to get around a bug in Apache2.

2003-11-27  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b39

	* Poll properties can now be applied recursively.

2003-11-27 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b38

	* Change: Wording in configdata.

2003-11-27  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b37

	* Turn on error display (if off) in devMode.

	* Fixed incorrect warning in check_mail.php under windows.

	* Colour of font changed in redmarble skin.

2003-11-26 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b36

	* Change: Removed debug code.

2003-11-26 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b35

	* Bugfix: "get rid of resized" didnt work if translated button label
		  contained htmlentities.

2003-11-25 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b34

	* Bugfix: Multilanguage was not disabled when in Linux, with gettext and
		  found locales were not suitable.

	* Change: Wording to make sure we are talking about <b>system<b> locales.

2003-11-24  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b33

	* Fixed bug where site wide slide show ran out of memory.

2003-11-24 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b32

	* Bugfix: remove '' around popup url as we use now "".
		  (Bug was introduced in b31)

2003-11-24 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b31

	* Change: Layout of check_versions.

	* Change: Layout of Config step 2 and 3.

	* "Bugfix": Corrected a lot HTML errors. Added quotes etc.

2003-11-22  Chris Schwerdt  <muti@afterglo.ws> 1.4.2-cvs-b30

	* Re-organized gallery_remote2.php.  Each command now has
	  its own function call instead of being compared
	  sequentially.
