@@ -49,8 +49,6 @@ if (!$gallery->album->isLoaded()) {
 	return;
 }
 
-
-
 $albumName = $gallery->session->albumName;
 
 if (!$gallery->session->viewedAlbum[$albumName]) {
@@ -66,9 +64,7 @@ $fullWidth="100%";
 
 $pAlbum = $gallery->album;
 
-?>
-
-<?php if (!$GALLERY_EMBEDDED_INSIDE) { ?>
+if (!$GALLERY_EMBEDDED_INSIDE) { ?>
 <html> 
 <head>
   <title><?php echo $gallery->app->galleryTitle ?> :: <?php echo $gallery->album->fields["title"] . "::" . _("Poll Results") ?></title>
